# smart_tg_bot

./: .env  main.py  pyproject.toml
app/: handlers.py  keyboards.py
